# fb-rest-api-rust

./: .env  Cargo.toml  Rocket.toml
migrations/2020-10-05-173321_create_services/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
